--- a/database/doc.html
+++ b/database/doc.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html><!-- DW6 --><head>
-<title>Bases de Données - Licence 1/Semestre 2 - TP 7-8 : Construire une mini-application de bases de données avec Java</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script language="JavaScript" src="doc_files/fonctions.html">
-</script>
-<link rel="stylesheet" href="doc_files/cours.css">
-<style type="text/css">
-code {
-	color: #BB0000;
-	font-weight: bold;	
-}
-</style>
+<html>
+<head>
+	<title>API Bases de Données - Documentation</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<script language="JavaScript" src="doc_files/fonctions.html">
+	</script>
+	<link rel="stylesheet" href="doc_files/cours.css">
+	<style type="text/css">
+	code {
+		color: #BB0000;
+		font-weight: bold;	
+	}
+	</style>
 </head>
 <body>
 
